problem with isVisible state. added 10ms delay to prevent immediate onset of message

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -19,4 +19,9 @@
 .contact-name {
   margin: 0;
   font-size: 16px;
+  color: white;
+}
+
+.contact:hover .contact-name {
+  color: black;
 }
